# Gluttony_Snake

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  snake
.devcontainer/: devcontainer.json
inc/: game.hpp  snake.hpp
src/: game.cpp  main.cpp  snake.cpp
